--- a/js-battleship/styles.css
+++ b/js-battleship/styles.css
@@ -1,6 +1,21 @@
+#gamesboard-container {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .game-board {
     width: 200px;
     height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.block {
+    width: 20px;
+    height: 20px;
+    /* border: solid 1px black;
+    box-sizing: border-box; */
 }
 
 .option-container {
@@ -36,7 +51,7 @@
 .destroyer-preview {
     width: 20px;
     height: 10px;
-    margin: 3px; 
+    margin: 3px;
 }
 
 .submarine-preview {
