--- a/js-battleship/styles.css
+++ b/js-battleship/styles.css
@@ -77,3 +77,15 @@
     height: 10px;
     margin: 3px;
 }
+
+.hover {
+    background-color: grey;
+}
+
+.boom {
+    background-color: red;
+}
+
+.empty {
+    background-color: grey;
+}
